Fixed snowfall cutting off midway down the screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,12 +11,20 @@ html, body {
 }
 
 .fixed-bg {
-	position: fixed;
-	left:50%;
-	top:50%;
-	transform:translate(-50%, -50%);
-	width:100vw;
-	height:100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -10;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .text-img {
